--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- fav-icon links -->
+    <link rel="shortcut icon" href="asset/images/logo.png" type="image/x-icon">
     <!-- bootstrap css links -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- css links -->
@@ -12,8 +14,216 @@
 </head>
 <body>
     
-    
+    <!-- header container-->
+    <header>
+        <div class="container">
 
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container">
+                  <a class="navbar-brand" href="#">
+                      <img src="asset/images/logo.png" alt="">
+                  </a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Shoes</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Backpack</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Subscribe</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+              <!-- main slider part -->
+              <div id="carouselExampleControls" class="carousel slide mt-5" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div style="background-color: #FEEAE9;" class="carousel-item active">
+                      <div class="row d-flex align-items-center p-5">
+                          <div class="col-lg-7 ps-5">
+                            <h1 class="fs-1">Mega LCD TV For Sports</h1>
+                            <p class="fs-6 text-secondary">This is the best tv the world for people who just want to waste time in front of tv</p>
+                            <h1 class="fs-1">$1200</h1>
+                            <button type="button" class="btn btn-warning">Warning</button>
+                          </div>
+                          <div class="col-lg-5">
+                            <img class="img-fluid" src="asset/images/banner-images/tv.png" class="d-block w-100" alt="...">
+                          </div>
+                      </div>
+                  </div>
+                  <div style="background-color: #FEEAE9;" class="carousel-item">
+                    <div class="row d-flex align-items-center p-5">
+                        <div class="col-lg-7 ps-5">
+                          <h1 class="fs-1">Cool Dude Headphone</h1>
+                          <p class="fs-6 text-secondary">This is the best tv the world for people who just want to waste time in front of tv</p>
+                          <h1 class="fs-1">$420</h1>
+                          <button type="button" class="btn btn-warning">Warning</button>
+                        </div>
+                        <div class="col-lg-5">
+                          <img class="img-fluid" src="asset/images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                  </div>
+                  <div style="background-color: #FEEAE9;" class="carousel-item">
+                    <div class="row d-flex align-items-center p-5">
+                        <div class="col-lg-7 ps-5">
+                          <h1 class="fs-1">X-Box for your Living room</h1>
+                          <p class="fs-6 text-secondary">This is the best tv the world for people who just want to waste time in front of tv</p>
+                          <h1 class="fs-1">$699</h1>
+                          <button type="button" class="btn btn-warning">Warning</button>
+                        </div>
+                        <div class="col-lg-5">
+                          <img class="img-fluid" src="asset/images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </div>
+    </header>
+<!--================================================================================================================================= header section end =================================================================================================================-->
+    <main>
+        <!-- category section -->
+        <section class="container my-5">
+                <div class="row gx-5">
+                <div class="col-lg-4">
+                    <div class="p-3 border bg-warning bg-gradient d-flex align-items-center justify-content-between rounded-3">
+                        <h1 class="text-white">Watch</h1>
+                        <img width="100" src="asset/images/categories/watch.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="p-3 border bg-success bg-gradient d-flex align-items-center justify-content-between rounded-3">
+                        <h1 class="text-white">Shoes</h1>
+                        <img width="100" src="asset/images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="p-3 border bg-danger bg-gradient d-flex align-items-center justify-content-between rounded-3">
+                        <h1 class="text-white">Bag</h1>
+                        <img width="100" src="asset/images/categories/bag.png" alt="">
+                    </div>
+                </div>
+        </section>
+        <!-------------------------------- product section --------------------------------------------->
+        <section>
+            <div class="container">
+                <h2>Shoes</h2>
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                    <div class="col">
+                      <div class="card shadow-lg border-0 h-100 rounded-3">
+                        <img src="asset/images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title ">Supply 350</h5>
+                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                          <h5>$120</h5>
+                        </div>
+                        <div class="">
+                          <button type="button" class="btn btn-danger btn-lg ms-3 mb-3">Buy Now</button>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card shadow-lg border-0 h-100 rounded-3">
+                        <img src="asset/images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Nike 360</h5>
+                          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                          <h5>$320</h5>
+                        </div>
+                        <div class="">
+                            <button type="button" class="btn btn-danger btn-lg mb-3 ms-3">Buy Now</button>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card shadow-lg border-0 h-100 rounded-3">
+                        <img src="asset/images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Red Airmax</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
+                          <h5>$350</h5>
+                        </div>
+                        <div class="">
+                            <button type="button" class="btn btn-danger btn-lg btn-lg mb-3 ms-3">Buy Now</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </section>
+        <!---------------------------------------- bagpack section ---------------------------------------------------->
+        <section>
+            <div class="container">
+                <h2 class="mt-5">Backpack</h2>
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                    <div class="col">
+                      <div class="card shadow-lg border-0 h-100 rounded-3">
+                        <img src="asset/images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title ">Red Laltu Bag</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <h5>$120</h5>
+                        </div>
+                        <div class="">
+                          <button type="button" class="btn btn-danger btn-lg ms-3 mb-3">Buy Now</button>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card shadow-lg border-0 h-100 rounded-3">
+                        <img src="asset/images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Blue Niltu Bag</h5>
+                          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                          <h5>$320</h5>
+                        </div>
+                        <div class="">
+                            <button type="button" class="btn btn-danger btn-lg mb-3 ms-3">Buy Now</button>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card shadow-lg border-0 h-100 rounded-3">
+                        <img src="asset/images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Black Kaltu Bag</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action..</p>
+                          <h5>$169</h5>
+                        </div>
+                        <div class="">
+                            <button type="button" class="btn btn-danger btn-lg btn-lg mb-3 ms-3">Buy Now</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </section>
+    </main>
+
+
+
+    <br>
+    <br>
+    <br>
+    <br>
 
 
 
