hand watch section complete

--- a/index.html
+++ b/index.html
@@ -216,6 +216,53 @@
                   </div>
             </div>
         </section>
+        <!----------------------------------------------- watch section --------------------------------------------------->
+        <section>
+            <div class="container">
+                <h2 class="mt-5">Hand Watch</h2>
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                    <div class="col">
+                      <div class="card shadow-lg border-0 h-100 rounded-3">
+                        <img src="asset/images/watch/watch6.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title ">Classic Watch</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <h5>$150</h5>
+                        </div>
+                        <div class="">
+                          <button type="button" class="btn btn-danger btn-lg ms-3 mb-3">Buy Now</button>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card shadow-lg border-0 h-100 rounded-3">
+                        <img src="asset/images/watch/watch5.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Smart Watch</h5>
+                          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                          <h5>$499</h5>
+                        </div>
+                        <div class="">
+                            <button type="button" class="btn btn-danger btn-lg mb-3 ms-3">Buy Now</button>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card shadow-lg border-0 h-100 rounded-3">
+                        <img width="100" src="asset/images/watch/watch4.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Lather Watch</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. .</p>
+                          <h5>$200</h5>
+                        </div>
+                        <div class="">
+                            <button type="button" class="btn btn-danger btn-lg btn-lg mb-3 ms-3">Buy Now</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </section>
     </main>
 
 
