footer section and full websit end

--- a/index.html
+++ b/index.html
@@ -263,14 +263,24 @@
                   </div>
             </div>
         </section>
+        <!-- ----------------------------------------------------- hand watch section end -------------------------------->
+        <section style="height: 300px; background-color: #FCEAE8;" class="container mt-5 d-flex justify-content-center align-items-center rounded-3">
+            <div>
+                <h2>LET'S STAY IN TOUCH</h2>
+                <p>Get updates on sales, specials and more</p>
+                <input type="email" class="form-control" placeholder="Your Email">
+                <br>
+                <button type="button" class="btn btn-danger btn-lg btn-lg ">SUBMIT</button>
+            </div>
+        </section>
+
     </main>
+    <!-- =================================================================== main section end ==============================================================================================================-->
+    <footer class="container mt-5">
+        <p class="text-center"><small>©2022. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+    </footer>
 
 
-
-    <br>
-    <br>
-    <br>
-    <br>
 
 
 
