landing page connection

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="container">
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
                 <div class="container">
                   <a class="navbar-brand" href="#">
                       <img src="asset/images/logo.png" alt="">
@@ -32,13 +32,16 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Shoes</a>
+                        <a class="nav-link" href="#shoes">Shoes</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Backpack</a>
+                        <a class="nav-link" href="#backpack">Backpack</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Subscribe</a>
+                        <a class="nav-link" href="#watch">Watch</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#subscribe">Subscribe</a>
                       </li>
                     </ul>
                   </div>
@@ -124,7 +127,7 @@
         </section>
         <!-------------------------------- product section --------------------------------------------->
         <section>
-            <div class="container">
+            <div class="container" id="shoes">
                 <h2>Shoes</h2>
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                     <div class="col">
@@ -171,7 +174,7 @@
         </section>
         <!---------------------------------------- bagpack section ---------------------------------------------------->
         <section>
-            <div class="container">
+            <div class="container" id="backpack">
                 <h2 class="mt-5">Backpack</h2>
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                     <div class="col">
@@ -218,7 +221,7 @@
         </section>
         <!----------------------------------------------- watch section --------------------------------------------------->
         <section>
-            <div class="container">
+            <div class="container" id="watch">
                 <h2 class="mt-5">Hand Watch</h2>
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                     <div class="col">
@@ -264,7 +267,7 @@
             </div>
         </section>
         <!-- ----------------------------------------------------- hand watch section end -------------------------------->
-        <section style="height: 300px; background-color: #FCEAE8;" class="container mt-5 d-flex justify-content-center align-items-center rounded-3">
+        <section style="height: 300px; background-color: #FCEAE8;" class="container mt-5 d-flex justify-content-center align-items-center rounded-3" id="subscribe">
             <div>
                 <h2>LET'S STAY IN TOUCH</h2>
                 <p>Get updates on sales, specials and more</p>
